--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -38,7 +38,21 @@
 
 .header ul li {
 	padding: 0 2rem;
-	transition: .2s ease-in-out;
+	transition: opacity .2s ease-in-out;
+	transition: padding .5s ease-in-out;
+	transition-delay: opacity .5s;
+
+	width: max-content;
+
+}
+
+.liDeactivate {
+	opacity: 0;
+	width: 0 !important;
+	padding: 0rem !important;
+}
+
+.header ul li a {
 }
 
 .contact {
@@ -49,14 +63,8 @@
 	transition: .2s ease-in-out;
 }
 
-.liDeactivate {
-	opacity: 0;
-	width: 0;
-	padding: 0rem;
-}
-
 .liActive {
 	opacity: 1;
-	width: max-content;
+	width: 100%;
 	padding: 0 2rem;
 }
