--- a/src/App.css
+++ b/src/App.css
@@ -157,3 +157,38 @@ img {
 .head-hidden {
 	opacity: 0;
 }
+
+.cursor {
+    position: fixed;
+    transform: translateX(-50%) translateY(-50%);
+    pointer-events:none;
+	z-index: 9999;
+}
+
+.cursor-in {
+    height: 0px;
+    width: 0px;
+    border-radius: 50%;
+	background-color: white;
+	transition: .1s ease-in-out;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.cursor-large .cursor-in {
+	transition: .3s ease-in-out;
+	height: 150px;
+	width: 150px;
+}
+
+.cursors .cursor:nth-child(1) {
+    background-color: #3a26fd;
+    z-index: 100002;
+}
+.cursors .cursor:nth-child(2) {
+    background-color: #f3f3f3;
+    z-index: 100001;
+    height: 9px;
+    width: 9px;
+}
