--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -73,12 +73,12 @@
 }
 
 .contact {
-	background-color: #7200CC;
+	background-color: #111111;
 	padding: 2rem 6rem;
 	color: white;
 	margin-left: auto;
 	transition: .1s ease-in-out;
-	border-radius: 100px;
+	border-radius: 10px;
 }
 
 .contactButton {
@@ -92,3 +92,101 @@
 	width: 100%;
 	padding: 0 2rem;
 } */
+
+.hamburger {
+	display: none;
+	position: relative;
+	width: 60px;
+	height: 40px;
+	position: relative;
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+	-webkit-transition: .5s ease-in-out;
+	-moz-transition: .5s ease-in-out;
+	-o-transition: .5s ease-in-out;
+	transition: .5s ease-in-out;
+	cursor: pointer;
+}
+
+.hamburger span {
+	display: block;
+	position: absolute;
+	height: 5px;
+	width: 100%;
+	background: #111111;
+	border-radius: 9px;
+	opacity: 1;
+	left: 0;
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+	-webkit-transition: .25s ease-in-out;
+	-moz-transition: .25s ease-in-out;
+	-o-transition: .25s ease-in-out;
+	transition: .25s ease-in-out;
+}
+
+.hamburger span:nth-child(1) {
+	top: 0px;
+	-webkit-transition: .1s ease-in-out;
+	-moz-transition: .1s ease-in-out;
+	-o-transition: .1s ease-in-out;
+	transition: .1s ease-in-out;
+
+}
+  
+.hamburger span:nth-child(2),.hamburger span:nth-child(3) {
+	top: 12px;
+}
+
+.hamburger span:nth-child(4) {
+	top: 24px;
+
+	-webkit-transition: .10s ease-in-out;
+	-moz-transition: .10s ease-in-out;
+	-o-transition: .10s ease-in-out;
+	transition: .10s ease-in-out;
+
+}
+
+.hamburger.open span:nth-child(1) {
+	top: 0px;
+	opacity: 0;
+}
+
+.hamburger.open span:nth-child(2) {
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
+
+.hamburger.open span:nth-child(3) {
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+}
+
+.hamburger.open span:nth-child(4) {
+	/* top: 0px; */
+	opacity: 0;
+}
+
+@media screen and (max-width: 1024px) {
+	.contact {
+		display: none;
+	}
+
+	.header ul {
+		display: none;
+	}
+
+	.hamburger {
+		display: flex;
+		margin-top: 1rem;
+	}
+}
