--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -1,20 +1,27 @@
 .header {
 	transition: .2s ease-in-out;
 	width: 100%;
+	
+	z-index: 10;
+}
+
+.header .navigation {
 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
-	margin: 0 auto;
-	z-index: 10;
-}
-
-.header nav {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin-top: 5rem;
 	flex: 0 0 30%;
+	margin: 0 auto;
+	margin-top: 5rem;
+	z-index: 9999;
+}
+
+.navigation.open .logo {
+	filter: invert(1);
+	transition: .3s ease-in-out;
 }
 
 .logo {
@@ -44,7 +51,7 @@
 	display: flex;
 }
 
-.header ul {
+.header .menu {
 	display: flex;
 	padding: 3rem 5rem;
 	background-color: #ECECEC;
@@ -74,11 +81,11 @@
 
 .contact {
 	background-color: #111111;
-	padding: 2rem 6rem;
+	padding: 1.5rem 3rem;
 	color: white;
 	margin-left: auto;
 	transition: .1s ease-in-out;
-	border-radius: 10px;
+	border-radius: 50px;
 }
 
 .contactButton {
@@ -96,7 +103,7 @@
 .hamburger {
 	display: none;
 	position: relative;
-	width: 60px;
+	width: 50px;
 	height: 40px;
 	position: relative;
 	-webkit-transform: rotate(0deg);
@@ -113,7 +120,7 @@
 .hamburger span {
 	display: block;
 	position: absolute;
-	height: 5px;
+	height: 3px;
 	width: 100%;
 	background: #111111;
 	border-radius: 9px;
@@ -155,6 +162,7 @@
 .hamburger.open span:nth-child(1) {
 	top: 0px;
 	opacity: 0;
+	background: white;
 }
 
 .hamburger.open span:nth-child(2) {
@@ -162,6 +170,7 @@
 	-moz-transform: rotate(45deg);
 	-o-transform: rotate(45deg);
 	transform: rotate(45deg);
+	background: white;
 }
 
 .hamburger.open span:nth-child(3) {
@@ -169,19 +178,48 @@
 	-moz-transform: rotate(-45deg);
 	-o-transform: rotate(-45deg);
 	transform: rotate(-45deg);
+	background: white;
 }
 
 .hamburger.open span:nth-child(4) {
 	/* top: 0px; */
 	opacity: 0;
+	background: white;
 }
+
+.mobileNav {
+	background: #111111;
+	opacity: 0;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100vw;
+	height: 100vh;
+	z-index: 9998;
+	pointer-events: none;
+	transition: .3s ease-in-out;
+	color: white;
+}
+
+.mobileNav.open {
+	opacity: 1;
+
+}
+
+.mobileNav ul {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	padding-left: 15vw;
+}
+
 
 @media screen and (max-width: 1024px) {
 	.contact {
 		display: none;
 	}
 
-	.header ul {
+	.header .menu {
 		display: none;
 	}
 
