--- a/src/css/ProjectsDetail.module.css
+++ b/src/css/ProjectsDetail.module.css
@@ -87,7 +87,7 @@
 	
 	.textImageCopy {
 		padding-right: 7rem;
-		margin-top: 45px;
+		margin-top: 10rem;
 		width: 50%;
 	}
 
@@ -101,7 +101,7 @@
 	
 	.textImageImage {
 		width: 45%;
-		height: 80rem;
+		height: 60rem;
 	}
 	
 	.textImageMirror {
@@ -121,6 +121,14 @@
 
 	.slideshowWrapper {
 		margin-top: 20rem;
+	}
+}
+
+
+@media screen and (min-width: 1280px) {
+	.textImageImage {
+		width: 45%;
+		height: 80rem;
 	}
 }
 
