--- a/src/App.css
+++ b/src/App.css
@@ -81,13 +81,14 @@ img {
 
 	&::before {
 		position: absolute;
-		top: 50%;
+		top: 51.5%;
 		transform: translateY(-50%);
 		right: -20px;
 		content: '';
-		width: 8px;
-		height: 8px;
+		width: 13px;
+		height: 13px;
 		background: black;
+		border-radius: 2px;
 		transition: .2s cubic-bezier(0.42, 0, 0.83, 0.59);
 		z-index: -1;
 	}
@@ -96,7 +97,7 @@ img {
 .button:hover {
 	&::before {
 		width: calc(100% + 8px);
-		height: 10px;
+		height: 13px;
 		background: #ECECEC;
 		transition-delay: background .2s;
 	}
@@ -106,6 +107,98 @@ img {
 	margin: auto;
 	padding: 0 2rem;
 
+}
+
+.gsap-footer-items {
+	opacity: 0;
+	transform: translateY(50px);
+}
+
+.gsap-footer-logo {
+	transform: translateX(0px);
+	opacity: 0;
+}
+
+.gsap-footer-title {
+	opacity: 0;
+	transform: translateY(50px);
+}
+
+.gsap-footer-secondary-items {
+	opacity: 0;
+}
+
+.gsap-line {
+	transform: scaleX(0%);
+	transform-origin: left;
+}
+
+.gsap-service-line {
+	width: 0;
+}
+
+.gsap-project-column1 {
+	transform: translateY(100px);
+	opacity: 0;
+}
+
+.gsap-project-column2 {
+	transform: translateY(100px);
+	opacity: 0;
+}
+
+.image-detail {
+	height: 60rem;
+}
+
+.loading {
+	display: flex;
+	justify-content: center;
+	position: relative;
+	width: 100%;
+	height: 100vh;
+}
+
+.loadingWrapper {
+	position: absolute;
+	top: 100%;
+	transform: translateY(-50%);
+}
+
+.logoWrapper {
+	position: relative;
+	width: 15rem;
+	height: 17rem;
+	display: flex;
+	justify-content: center;
+}
+
+.logoWrapper img {
+	width: inherit;
+	height: inherit;
+}
+
+.loadingWrapper img {
+	object-fit: contain;
+}
+
+.left {
+	position: absolute;
+	top: 350%;
+	right: -1.5rem;
+	width: 8rem;
+}
+
+.center {
+	position: absolute;
+	width: 8rem;
+}
+
+.right {
+	position: absolute;
+	top: 300%;
+	left: -1.5rem;
+	width: 8rem;
 }
 
 @media screen and (min-width: 640px) {
@@ -195,6 +288,7 @@ img {
 	align-items: center;
 }
 
+
 .cursor-large .cursor-in {
 	transition: .3s ease-in-out;
 	height: 150px;
@@ -215,7 +309,7 @@ img {
 .react-slideshow-container .default-nav {
 	height: 100%;
 	border-radius: 0;
-	width: 50% !important;
+	width: 50%;
 	background-color: transparent;
 	background: transparent;
 	opacity: 0;
@@ -242,6 +336,45 @@ img {
 	.head-hidden {
 		opacity: 1;
 	}
+
+	.cursor-in {
+		display: none;
+	}
+
+	.react-slideshow-container .default-nav {
+		height: 100px;
+		border-radius: 0;
+		width: 100px;
+		background: white;
+		opacity: 1;
+		/* border-radius: 50%; */
+
+		bottom: 0px;
+	}
+
+	.react-slideshow-container .default-nav svg {
+		width: 2rem;
+		height: 2rem;
+	}
+
+	.react-slideshow-container .default-nav:nth-child(1) {
+		/* left: -10px; */
+		border-radius: 0 50% 0 0;
+
+	}
+
+	.react-slideshow-container .default-nav:last-of-type {
+		/* right: -10px; */
+		border-radius: 50% 0 0 0;
+	}
+
+	.react-slideshow-container .default-nav:hover {
+		background: #ececec;
+	}
+
+	.react-slideshow-container svg {
+		display: block;
+	}
 }
 
 .react-slideshow-fadezoom-wrapper div {
@@ -253,11 +386,21 @@ img {
 	width: 100%;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 600px) {
 	h1 {
-
+		font-size: 6rem;
 	}
+}
 
+@media screen and (max-width: 425px) {
+
+	h1 {
+		font-size: 4rem;
+	}
 	h2 {
 		font-size: 4rem;
 	}
@@ -265,4 +408,6 @@ img {
 	.head-hidden {
 		opacity: 1;
 	}
+
+
 }
