--- a/src/css/Projects.module.css
+++ b/src/css/Projects.module.css
@@ -4,7 +4,9 @@
 
 .project {
 	display: flex;
-	margin-top: 20rem;
+	margin-top: 5rem;
+	/* margin-bottom: -20rem; */
+
 }
 
 .projectTitle {
@@ -20,6 +22,53 @@
 	border-radius: 50px;
 	overflow: hidden;
 	cursor: pointer;
+	position: relative;
+}
+
+.projectChildOverlay {
+	position: absolute;
+	height: 200%;
+	bottom: -50%;
+	width: 100%;
+	background: rgb(214,214,214);
+	background: radial-gradient(circle, rgba(214,214,214,0) 30%, rgb(78, 78, 78) 200%);
+	opacity: 0;
+}
+
+.projectChildWrapper {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	bottom: 75px;
+	width: 90%;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.projectLine {
+	/* border-bottom: 1px solid white; */
+	width: 100%;
+	height: 1px;
+	transform: scaleX(0);
+	transform-origin: left;
+	transition: .5s cubic-bezier(0.77, 0.01, 0.26, 1);
+}
+
+.projectName {
+	font-size: 3rem;
+	color: white;
+	margin-top: 3rem;
+	margin-left: .5rem;
+	opacity: 0;
+	transform: translateX(20px);
+}
+
+.projectButton {
+	margin-top: 3rem;
+	margin-right: 1rem;
+	opacity: 0;
+	transform: translate(-10px ,20px);
 }
 
 .projectChildLink {
@@ -71,4 +120,78 @@
 .projectsTag {
 	position: absolute;
 	top: -5rem;
+}
+
+@media screen and (max-width: 1440px) {
+	.projectChildWrapper {
+		bottom: 50px;
+	}
+}
+
+@media screen and (max-width: 1024px) {
+	.projectWrapper {
+		padding-top: 20rem;
+	}
+
+}
+
+@media screen and (max-width: 768px) {
+
+	.project {
+		flex-flow: column;
+		/* margin-bottom: -25rem; */
+
+	}
+
+	.projectChildWrapper {
+		display: none;
+	}
+
+	.serviceItemPart2 {
+		display: flex;
+		flex-flow: column;
+	}
+
+	.projectColumn {
+		width: 100%;
+	}
+
+	.project .projectColumn:nth-child(1) {
+		margin-right: 0;
+	}
+
+	.project .projectColumn:nth-child(2) {
+		margin-left: 0;
+		margin-top: -8rem;
+	}
+
+	.serviceItemSources {
+		margin-top: 5rem;
+	}
+
+	.serviceItemSources img:nth-child(3) {
+		left: 0;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.wrapper {
+		padding-top: 22rem;
+	}
+
+	.articleM {
+		margin-top: 10rem;
+	}
+
+	.servicesWrapper {
+		width: 100vw;
+    left: 50%;
+    position: relative;
+    transform: translateX(-50%);
+	}
+
+	.projectTitle {
+		font-size: 6rem;
+	}
+
 }
