--- a/src/css/ProjectsDetail.module.css
+++ b/src/css/ProjectsDetail.module.css
@@ -126,7 +126,7 @@
 		margin-top: 9rem;
 		position: relative;
 		height: 80rem;
-		transform: scale(1.05);
+		transform: scale(.95);
 	}
 
 	.slideshowWrapper {
