overflow on introchild

--- a/src/css/Index.module.css
+++ b/src/css/Index.module.css
@@ -34,10 +34,13 @@
 	border-radius: 50px;
 }
 
+.introChild img {
+	border-radius: 50px;
+}
+
 .introChild {
 	display: flex;
 	align-items: center;
-	overflow: hidden;
 	width: 100%;
 	height: max-content;
 	transform: scale(.9);
